tests/errors/1_lexical_errors/invalid_double-8.java
class Main {
    static void run() {
        double a = 5;
        double x = 3.a;
    }
}
